spec/e2e/assignment/grouping.lit
let a = "a";
(a) = "value"; # error: [line 2] Error at "=": I was expecting a variable before the equal sign.
